2006-08-09  Rafael Villar Burke  <pachi@rvburke.com>

	* articles/writing-a-custom-widget-using-pygtk.htm
	* articles/writing-a-custom-widget-using-pygtk/resources/iTunesStars.png
	* articles/writing-a-custom-widget-using-pygtk/resources/somerights20.png
	* articles/writing-a-custom-widget-using-pygtk/resources/starhscale.tar.gz
	* articles/writing-a-custom-widget-using-pygtk/resources/style.css: upload
	new article by Mark Mruss

2006-07-28  Christian Reis  <kiko@async.com.br>

	* applications.src: Add GFCE Ultra.

2006-07-06  John Finlay  <finlay@moeraki.com>

	* newsitems.py: 2.9.0 reference released.

	* Makefile (REFTARBALLS): Arrange for reference tarballs to be in
	own directory since they are numbered.

	* reference.src: Reference tarballs now in the dist/reference-tarballs
	directory.

2006-06-12  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* about.src: Add all gnome modules and clarify a bit

2006-06-12  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* applications.src: Add kefir (tepache fork)

2006-06-12  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* downloads.src: Add gnome-python-desktop, gnome-python-extras
	and change layout to keep old versions section at the end

2006-06-04  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* newsitems.py: Write correct article entry

2006-06-03  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* articles.src: Add new article application-pygtk-glade
	* newsitems.py: Add new article entry

2006-06-03  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

	* articles/application-pygtk-glade/Building_an_Application_with_PyGTK_and_Glade.htm
	* articles/application-pygtk-glade/resources/pywine_01.png
	* articles/application-pygtk-glade/resources/pywine_02.png
	* articles/application-pygtk-glade/resources/pywine_04.png
	* articles/application-pygtk-glade/resources/PyWine.tar.gz
	* articles/application-pygtk-glade/resources/small_pywine_03.png