@@ -1,5 +1,10 @@
 2006-08-09  Rafael Villar Burke  <pachi@rvburke.com>
 
+	* articles.src: link article by Mark Mruss
+	* newsitems.src: new article item
+
+2006-08-09  Rafael Villar Burke  <pachi@rvburke.com>
+
 	* articles/writing-a-custom-widget-using-pygtk.htm
 	* articles/writing-a-custom-widget-using-pygtk/resources/iTunesStars.png
 	* articles/writing-a-custom-widget-using-pygtk/resources/somerights20.png
